--- a/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
+++ b/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
@@ -36,6 +36,15 @@ spec:
             - port: "4180"
               protocol: TCP
   egress:
+    # nginx
+    - toEndpoints:
+        - matchLabels:
+            app.kubernetes.io/name: ingress-nginx
+            app.kubernetes.io/component: controller
+      toPorts:
+        - ports:
+            - port: "443"
+              protocol: TCP
     # esphome
     - toEndpoints:
         - matchLabels:
