--- a/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
+++ b/kubernetes/clusters/main/ingress/nginx/app/networkpolicy.yaml
@@ -25,6 +25,15 @@ spec:
       app.kubernetes.io/name: ingress-nginx
       app.kubernetes.io/component: controller
   ingress:
+    # nginx
+    - fromEndpoints:
+        - matchLabels:
+            app.kubernetes.io/name: ingress-nginx
+            app.kubernetes.io/component: controller
+      toPorts:
+        - ports:
+            - port: "443"
+              protocol: TCP
     # oauth2-proxy
     - fromEndpoints:
         - matchLabels:
@@ -36,15 +45,6 @@ spec:
             - port: "4180"
               protocol: TCP
   egress:
-    # nginx
-    - toEndpoints:
-        - matchLabels:
-            app.kubernetes.io/name: ingress-nginx
-            app.kubernetes.io/component: controller
-      toPorts:
-        - ports:
-            - port: "443"
-              protocol: TCP
     # esphome
     - toEndpoints:
         - matchLabels:
