--- a/kubernetes/clusters/main/security/oauth2-proxy/app/kustomization.yaml
+++ b/kubernetes/clusters/main/security/oauth2-proxy/app/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: security
 resources:
+  - networkpolicy.yaml
   - externalsecret.yaml
   - helmrelease.yaml
   - ingress.yaml
