--- a/kubernetes/clusters/main/security/oauth2-proxy/ks.yaml
+++ b/kubernetes/clusters/main/security/oauth2-proxy/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: oauth2-proxy
+  name: &appname oauth2-proxy
   namespace: flux-system
 spec:
+  targetNamespace: security
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/security/oauth2-proxy/app
   prune: false
   sourceRef:
