allow prometheus/api server

--- a/kubernetes/clusters/common/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/clusters/common/cert-manager/cert-manager/app/helmrelease.yaml
@@ -27,6 +27,9 @@ spec:
     keepHistory: false
   values:
     installCRDs: true
+    podLabels:
+      ingress.home.arpa/prometheus: allow
+      egress.home.arpa/apiserver: allow
     automountServiceAccountToken: false
     serviceAccount:
       automountServiceAccountToken: false
