--- a/kubernetes/clusters/common/cert-manager/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/clusters/common/cert-manager/cert-manager/app/helmrelease.yaml
@@ -30,6 +30,7 @@ spec:
     podLabels:
       ingress.home.arpa/prometheus: allow
       egress.home.arpa/apiserver: allow
+      egress.home.arpa/vault: allow
     automountServiceAccountToken: false
     serviceAccount:
       automountServiceAccountToken: false
