test cert-manager netpol

--- a/kubernetes/clusters/main/ingress/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/main/ingress/ciliumnetworkpolicy.yaml
@@ -10,3 +10,16 @@ spec:
     - {}
   egress:
     - {}
+# todo: move to common
+---
+apiVersion: cilium.io/v2
+kind: CiliumNetworkPolicy
+metadata:
+  name: default-deny
+  namespace: cert-manager
+spec:
+  endpointSelector: {}
+  ingress:
+    - {}
+  egress:
+    - {}
