--- a/kubernetes/clusters/main/home-automation/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/home-assistant/app/helmrelease.yaml
@@ -106,7 +106,7 @@ spec:
               - *host
     serviceAccount:
       create: true
-      name: home-assistant
+      name: hass
     persistence:
       config:
         existingClaim: home-assistant
