--- a/kubernetes/clusters/common/kube-system/node-feature-discovery/ks.yaml
+++ b/kubernetes/clusters/common/kube-system/node-feature-discovery/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: node-feature-discovery
+  name: &appname node-feature-discovery
   namespace: flux-system
 spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/kube-system/node-feature-discovery/app
   prune: false
   sourceRef:
@@ -18,11 +22,15 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: node-feature-rules
+  name: &appname node-feature-rules
   namespace: flux-system
 spec:
   dependsOn:
     - name: node-feature-discovery
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/kube-system/node-feature-discovery/rules
   prune: false
   sourceRef:
