--- a/kubernetes/clusters/common/volsync/volsync/ks.yaml
+++ b/kubernetes/clusters/common/volsync/volsync/ks.yaml
@@ -2,11 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: volsync
+  name: &appname volsync
   namespace: flux-system
 spec:
   dependsOn:
     - name: snapshot-controller
+  targetNamespace: volsync
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/volsync/volsync/app
   prune: false
   sourceRef:
