--- a/kubernetes/clusters/k0s/monitoring/loki/ks.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/ks.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app loki
+  name: &appname loki
   namespace: flux-system
 spec:
   targetNamespace: monitoring
   commonMetadata:
     labels:
-      app.kubernetes.io/name: *app
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/loki/app
   prune: true
   sourceRef:
