--- a/kubernetes/clusters/main/database/emqx/ks.yaml
+++ b/kubernetes/clusters/main/database/emqx/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: emqx
+  name: &appname emqx
   namespace: flux-system
 spec:
+  targetNamespace: database
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/database/emqx/app
   prune: false
   sourceRef:
