--- a/kubernetes/clusters/common/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/clusters/common/cert-manager/cert-manager/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cert-manager
+  name: &appname cert-manager
   namespace: flux-system
 spec:
+  targetNamespace: cert-manager
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/cert-manager/cert-manager/app
   prune: false
   sourceRef:
@@ -18,11 +22,15 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cert-manager-issuers
+  name: &appname cert-manager-issuers
   namespace: flux-system
 spec:
   dependsOn:
     - name: cert-manager
+  targetNamespace: cert-manager
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/cert-manager/cert-manager/issuers
   prune: false
   sourceRef:
