--- a/kubernetes/clusters/common/database/cloudnative-pg/ks.yaml
+++ b/kubernetes/clusters/common/database/cloudnative-pg/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cloudnative-pg
+  name: &appname cloudnative-pg
   namespace: flux-system
 spec:
+  targetNamespace: database
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/database/cloudnative-pg/app
   prune: false
   sourceRef:
