--- a/kubernetes/clusters/common/flux-system/addons/ks.yaml
+++ b/kubernetes/clusters/common/flux-system/addons/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: flux-addons
+  name: &appname flux-addons
   namespace: flux-system
 spec:
+  targetNamespace: flux-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/flux-system/addons/app
   prune: false
   sourceRef:
