--- a/kubernetes/clusters/common/kube-system/coredns/ks.yaml
+++ b/kubernetes/clusters/common/kube-system/coredns/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: coredns
+  name: &appname coredns
   namespace: flux-system
 spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/kube-system/coredns/app
   prune: false
   sourceRef:
