--- a/kubernetes/clusters/common/kube-system/external-secrets/ks.yaml
+++ b/kubernetes/clusters/common/kube-system/external-secrets/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: external-secrets
+  name: &appname external-secrets
   namespace: flux-system
 spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/kube-system/external-secrets/app
   prune: false
   sourceRef:
