--- a/kubernetes/clusters/common/kube-system/local-path-provisioner/ks.yaml
+++ b/kubernetes/clusters/common/kube-system/local-path-provisioner/ks.yaml
@@ -2,11 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: local-path-provisioner
+  name: &appname local-path-provisioner
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/disabled: "true"
 spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/kube-system/local-path-provisioner/app
   prune: false
   sourceRef:
