--- a/kubernetes/clusters/common/kube-system/metrics-server/ks.yaml
+++ b/kubernetes/clusters/common/kube-system/metrics-server/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: metrics-server
+  name: &appname metrics-server
   namespace: flux-system
 spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/kube-system/metrics-server/app
   prune: false
   sourceRef:
