--- a/kubernetes/clusters/common/kyverno/kyverno/ks.yaml
+++ b/kubernetes/clusters/common/kyverno/kyverno/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kyverno
+  name: &appname kyverno
   namespace: flux-system
 spec:
+  targetNamespace: kyverno
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/kyverno/kyverno/app
   prune: false
   sourceRef:
@@ -18,11 +22,15 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-policies
+  name: &appname cluster-policies
   namespace: flux-system
 spec:
   dependsOn:
     - name: kyverno
+  targetNamespace: kyverno
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/kyverno/kyverno/policies
   prune: false
   sourceRef:
