--- a/kubernetes/clusters/k0s/database/memcached/ks.yaml
+++ b/kubernetes/clusters/k0s/database/memcached/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: memcached-loki-results-cache
+  name: &appname memcached-loki-results-cache
   namespace: flux-system
 spec:
+  targetNamespace: database
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/database/memcached/loki-results-cache
   prune: false
   sourceRef:
@@ -18,9 +22,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: memcached-loki-chunk-cache
+  name: &appname memcached-loki-chunk-cache
   namespace: flux-system
 spec:
+  targetNamespace: database
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/database/memcached/loki-chunk-cache
   prune: false
   sourceRef:
