--- a/kubernetes/clusters/k0s/ingress/cloudflare-ddns/ks.yaml
+++ b/kubernetes/clusters/k0s/ingress/cloudflare-ddns/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cloudflare-ddns
+  name: &appname cloudflare-ddns
   namespace: flux-system
 spec:
+  targetNamespace: ingress
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/cloudflare-ddns/app
   prune: false
   sourceRef:
