--- a/kubernetes/clusters/k0s/ingress/nginx/ks.yaml
+++ b/kubernetes/clusters/k0s/ingress/nginx/ks.yaml
@@ -2,11 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: nginx
+  name: &appname nginx
   namespace: flux-system
 spec:
   dependsOn:
   - name: cert-manager
+  targetNamespace: ingress
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/app
   prune: false
   sourceRef:
@@ -20,11 +24,15 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: certificates
+  name: &appname certificates
   namespace: flux-system
 spec:
   dependsOn:
   - name: cert-manager
+  targetNamespace: ingress
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/certificates
   prune: false
   sourceRef:
@@ -38,11 +46,15 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: external-ingress
+  name: &appname external-ingress
   namespace: flux-system
 spec:
   dependsOn:
   - name: cert-manager
+  targetNamespace: ingress
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/nginx/external-ingress
   prune: false
   sourceRef:
