--- a/kubernetes/clusters/k0s/kube-system/cilium/ks.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cilium
+  name: &appname cilium
   namespace: flux-system
 spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/k0s/kube-system/cilium/app
   prune: false
   sourceRef:
