--- a/kubernetes/clusters/k0s/kube-system/issuers/ks.yaml
+++ b/kubernetes/clusters/k0s/kube-system/issuers/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: issuers-vault
+  name: &appname issuers-vault
   namespace: flux-system
 spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/kube-system/issuers/vault
   prune: false
   sourceRef:
