--- a/kubernetes/clusters/k0s/monitoring/grafana/app/ks.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/app/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: grafana
+  name: &appname grafana
   namespace: flux-system
 spec:
+  targetNamespace: monitoring
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/common/monitoring/grafana/app
   prune: false
   sourceRef:
