--- a/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kube-prometheus-stack/ks.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app kube-prometheus-stack
+  name: &appname kube-prometheus-stack
   namespace: flux-system
 spec:
   targetNamespace: monitoring
   commonMetadata:
     labels:
-      app.kubernetes.io/name: *app
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/kube-prometheus-stack/app
   prune: true
   sourceRef:
