--- a/kubernetes/clusters/k0s/monitoring/unpoller/ks.yaml
+++ b/kubernetes/clusters/k0s/monitoring/unpoller/ks.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app unpoller
+  name: &appname unpoller
   namespace: flux-system
 spec:
   targetNamespace: monitoring
   commonMetadata:
     labels:
-      app.kubernetes.io/name: *app
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/unpoller/app
   prune: false
   sourceRef:
