--- a/kubernetes/clusters/k0s/security/dex/ks.yaml
+++ b/kubernetes/clusters/k0s/security/dex/ks.yaml
@@ -2,11 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: dex
+  name: &appname dex
   namespace: flux-system
 spec:
   dependsOn:
     - name: lldap
+  targetNamespace: security
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/security/dex/app
   prune: false
   sourceRef:
