--- a/kubernetes/clusters/k0s/storage/minio/ks.yaml
+++ b/kubernetes/clusters/k0s/storage/minio/ks.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app minio
+  name: &appname minio
   namespace: flux-system
 spec:
   targetNamespace: storage
   commonMetadata:
     labels:
-      app.kubernetes.io/name: *app
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/storage/minio/app
   prune: true
   sourceRef:
