--- a/kubernetes/clusters/k0s/storage/restic/ks.yaml
+++ b/kubernetes/clusters/k0s/storage/restic/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: restic
+  name: &appname restic
   namespace: flux-system
 spec:
+  targetNamespace: storage
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/storage/restic/app
   prune: false
   sourceRef:
