--- a/kubernetes/clusters/k0s/vault/vault/ks.yaml
+++ b/kubernetes/clusters/k0s/vault/vault/ks.yaml
@@ -2,11 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: vault
+  name: &appname vault
   namespace: flux-system
 spec:
   dependsOn:
     - name: local-path-provisioner
+  targetNamespace: vault
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/vault/vault/app
   prune: false
   sourceRef:
