--- a/kubernetes/clusters/main/home-automation/actual/ks.yaml
+++ b/kubernetes/clusters/main/home-automation/actual/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: actual
+  name: &appname actual
   namespace: flux-system
 spec:
+  targetNamespace: home-automation
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/home-automation/actual/app
   prune: false
   sourceRef:
