--- a/kubernetes/clusters/main/ingress/cloudflared/ks.yaml
+++ b/kubernetes/clusters/main/ingress/cloudflared/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cloudflared
+  name: &appname cloudflared
   namespace: flux-system
 spec:
+  targetNamespace: ingress
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/ingress/cloudflared/app
   prune: false
   sourceRef:
