--- a/kubernetes/clusters/main/kube-system/cilium/ks.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/ks.yaml
@@ -20,7 +20,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cilium-network-policies
+  name: &appname cilium-network-policies
   namespace: flux-system
 spec:
   targetNamespace: kube-system
