--- a/kubernetes/clusters/main/kube-system/tetragon/ks.yaml
+++ b/kubernetes/clusters/main/kube-system/tetragon/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: tetragon-policies
+  name: &appname tetragon-policies
   namespace: flux-system
 spec:
+  targetNamespace: kube-system
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/kube-system/tetragon/policies
   prune: false
   sourceRef:
