--- a/kubernetes/clusters/main/media/excalidraw/ks.yaml
+++ b/kubernetes/clusters/main/media/excalidraw/ks.yaml
@@ -2,9 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: excalidraw
+  name: &appname excalidraw
   namespace: flux-system
 spec:
+  targetNamespace: media
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/media/excalidraw/app
   prune: false
   sourceRef:
