--- a/kubernetes/clusters/main/media/immich/ks.yaml
+++ b/kubernetes/clusters/main/media/immich/ks.yaml
@@ -2,11 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: immich
+  name: &appname immich
   namespace: flux-system
 spec:
   dependsOn:
     - name: media-immich-database
+  targetNamespace: media
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/media/immich/app
   prune: false
   sourceRef:
@@ -20,11 +24,15 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: media-immich-database
+  name: &appname media-immich-database
   namespace: flux-system
 spec:
   dependsOn:
     - name: cloudnative-pg
+  targetNamespace: media
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/media/immich/database
   prune: false
   sourceRef:
