--- a/kubernetes/clusters/main/monitoring/vector/ks.yaml
+++ b/kubernetes/clusters/main/monitoring/vector/ks.yaml
@@ -2,13 +2,13 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app vector
+  name: &appname vector
   namespace: flux-system
 spec:
   targetNamespace: monitoring
   commonMetadata:
     labels:
-      app.kubernetes.io/name: *app
+      app.kubernetes.io/name: *appname
   path: ./kubernetes/clusters/${ENVIRONMENT}/monitoring/vector/app
   prune: true
   sourceRef:
