--- a/kubernetes/clusters/main/media/kustomization.yaml
+++ b/kubernetes/clusters/main/media/kustomization.yaml
@@ -8,6 +8,5 @@ resources:
   - ./ciliumnetworkpolicy.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
-  - ./excalidraw/ks.yaml
-  #- ./immich/ks.yaml
+  - ./immich/ks.yaml
 
