add netpols to k0s rename policies

--- a/kubernetes/clusters/k0s/ingress/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/k0s/ingress/ciliumnetworkpolicy.yaml
@@ -3,7 +3,7 @@ apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
   name: default-deny-outside-namespace
-  namespace: &namespace rook-ceph
+  namespace: &namespace ingress
 spec:
   endpointSelector: {}
   egress:
