--- a/kubernetes/clusters/k0s/media/kustomization.yaml
+++ b/kubernetes/clusters/k0s/media/kustomization.yaml
@@ -5,4 +5,5 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ./ciliumnetworkpolicy.yaml
   - ./service.yaml
