--- a/kubernetes/clusters/k0s/monitoring/kustomization.yaml
+++ b/kubernetes/clusters/k0s/monitoring/kustomization.yaml
@@ -5,6 +5,7 @@ kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
+  - ./ciliumnetworkpolicy.yaml
   - ./externalsecret.yaml
   # Flux-Kustomizations
   - ./grafana/ks.yaml
