--- a/kubernetes/clusters/main/volsync/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/main/volsync/ciliumnetworkpolicy.yaml
@@ -2,7 +2,7 @@
 apiVersion: cilium.io/v2
 kind: CiliumNetworkPolicy
 metadata:
-  name: default-deny
+  name: default-deny-outside-namespace
   namespace: &namespace volsync
 spec:
   endpointSelector: {}
