--- a/kubernetes/clusters/common/kube-system/cilium/ks.yaml
+++ b/kubernetes/clusters/common/kube-system/cilium/ks.yaml
@@ -2,14 +2,15 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &appname cilium
+  name: &appname cilium-network-policies
   namespace: flux-system
 spec:
   targetNamespace: kube-system
   commonMetadata:
     labels:
-      app.kubernetes.io/name: *appname
-  path: ./kubernetes/clusters/main/kube-system/cilium/app
+      app.kubernetes.io/name: cilium
+      app.kubernetes.io/component: netpols
+  path: ./kubernetes/clusters/common/kube-system/cilium/network-policies
   prune: true
   sourceRef:
     kind: GitRepository
