--- a/kubernetes/clusters/k0s/ingress/nginx/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/ingress/nginx/app/helmrelease.yaml
@@ -28,12 +28,15 @@ spec:
   values:
     controller:
       replicaCount: 1
+      podLabels:
+        ingress.home.arpa/world: allow
       service:
         annotations:
           io.cilium/lb-ipam-ips: "192.168.8.242"
         externalTrafficPolicy: Cluster
       ingressClassResource:
         default: true
+      allowSnippetAnnotations: true
       config:
         client-body-buffer-size: 100M
         client-body-timeout: 120
@@ -43,8 +46,17 @@ spec:
         hsts-max-age: 31449600
         keep-alive-requests: 10000
         keep-alive: 120
+        log-format-escape-json: "true"
+        log-format-upstream: >
+          {"time": "$time_iso8601", "remote_addr": "$proxy_protocol_addr", "x_forwarded_for": "$proxy_add_x_forwarded_for",
+          "request_id": "$req_id", "remote_user": "$remote_user", "bytes_sent": $bytes_sent, "request_time": $request_time,
+          "status": $status, "vhost": "$host", "request_proto": "$server_protocol", "path": "$uri", "request_query": "$args",
+          "request_length": $request_length, "duration": $request_time, "method": "$request_method", "http_referrer": "$http_referer",
+          "http_user_agent": "$http_user_agent"}
         proxy-body-size: 0
         proxy-buffer-size: 16k
+        proxy-read-timeout: 3600
+        proxy-send-timeout: 3600
         ssl-protocols: TLSv1.3 TLSv1.2
       metrics:
         enabled: true
@@ -55,11 +67,43 @@ spec:
             any: true
       extraArgs:
         default-ssl-certificate: "ingress/logfold-com-tls"
+      topologySpreadConstraints:
+        - maxSkew: 1
+          topologyKey: kubernetes.io/hostname
+          whenUnsatisfiable: DoNotSchedule
+          labelSelector:
+            matchLabels:
+              app.kubernetes.io/name: nginx-internal
+              app.kubernetes.io/component: controller
       resources:
         requests:
           cpu: 100m
           memory: 250Mi
         limits:
           memory: 500Mi
+      extraVolumeMounts:
+      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
+        name: serviceaccount-token
+      extraVolumes:
+      - name: serviceaccount-token
+        projected:
+          defaultMode: 0444
+          sources:
+          - serviceAccountToken:
+              expirationSeconds: 3607
+              path: token
+          - configMap:
+              name: kube-root-ca.crt
+              items:
+              - key: ca.crt
+                path: ca.crt
+          - downwardAPI:
+              items:
+              - path: namespace
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.namespace
     defaultBackend:
       enabled: false
+    serviceAccount:
+      automountServiceAccountToken: false
