--- a/kubernetes/clusters/k0s/storage/minio/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/storage/minio/app/helmrelease.yaml
@@ -70,6 +70,10 @@ spec:
               fsGroup: 568
               fsGroupChangePolicy: OnRootMismatch
               supplementalGroups: [100]
+        pod:
+          labels:
+            ingress.home.arpa/prometheus: allow
+            ingress.home.arpa/nginx: allow
     service:
       app:
         controller: minio
