--- a/kubernetes/clusters/k0s/storage/restic/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/storage/restic/app/helmrelease.yaml
@@ -67,6 +67,10 @@ spec:
             image:
               repository: restic/rest-server
               tag: 0.12.1
+        pod:
+          labels:
+            ingress.home.arpa/prometheus: allow
+            ingress.home.arpa/nginx: allow
     service:
       app:
         controller: restic
