--- a/kubernetes/clusters/k0s/monitoring/loki/app/networkpolicy.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/networkpolicy.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   endpointSelector:
     matchLabels:
-      name: loki
+      app.kubernetes.io/name: loki
   egress:
     # memcached
     - toEndpoints:
