--- a/kubernetes/clusters/k0s/monitoring/thanos/app/networkpolicy.yaml
+++ b/kubernetes/clusters/k0s/monitoring/thanos/app/networkpolicy.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   endpointSelector:
     matchLabels:
-      app.kubernetes.io/name: thanos
+      name: thanos
   egress:
     # minio
     - toEndpoints:
