--- a/kubernetes/clusters/k0s/storage/minio/app/networkpolicy.yaml
+++ b/kubernetes/clusters/k0s/storage/minio/app/networkpolicy.yaml
@@ -12,7 +12,7 @@ spec:
     # loki
     - fromEndpoints:
         - matchLabels:
-            name: loki
+            app.kubernetes.io/name: loki
       toPorts:
         - ports:
             - port: "9000"
@@ -20,7 +20,7 @@ spec:
     # thanos
     - fromEndpoints:
         - matchLabels:
-            name: thanos
+            app.kubernetes.io/name: thanos
       toPorts:
         - ports:
             - port: "9000"
