--- a/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/grafana/app/helmrelease.yaml
@@ -27,6 +27,10 @@ spec:
     keepHistory: false
   values:
     replicas: 1
+    podLabels:
+      egress.home.arpa/world: allow
+      ingress.home.arpa/prometheus: allow
+      ingress.home.arpa/nginx: allow
     env:
       GF_DATABASE_SSL_MODE: disable
       GF_DATABASE_TYPE: postgres
