--- a/kubernetes/clusters/k0s/ingress/nginx/app/networkpolicy.yaml
+++ b/kubernetes/clusters/k0s/ingress/nginx/app/networkpolicy.yaml
@@ -29,6 +29,7 @@ spec:
     - toEndpoints:
         - matchLabels:
             app.kubernetes.io/name: grafana
+            app.kubernetes.io/instance: grafana
       toPorts:
         - ports:
             - port: "3000"
