--- a/kubernetes/clusters/k0s/monitoring/loki/app/networkpolicy.yaml
+++ b/kubernetes/clusters/k0s/monitoring/loki/app/networkpolicy.yaml
@@ -8,7 +8,7 @@ spec:
   endpointSelector:
     matchLabels:
       app.kubernetes.io/name: loki
-      app.kubernetes.io/instance: loki
+      app.kubernetes.io/namespace: monitoring
   egress:
     # memcached
     - toEndpoints:
