--- a/kubernetes/clusters/k0s/storage/minio/app/networkpolicy.yaml
+++ b/kubernetes/clusters/k0s/storage/minio/app/networkpolicy.yaml
@@ -13,7 +13,7 @@ spec:
     - fromEndpoints:
         - matchLabels:
             app.kubernetes.io/name: loki
-            app.kubernetes.io/instance: loki
+            app.kubernetes.io/namespace: monitoring
       toPorts:
         - ports:
             - port: "9000"
@@ -22,7 +22,7 @@ spec:
     - fromEndpoints:
         - matchLabels:
             app.kubernetes.io/name: thanos
-            app.kubernetes.io/instance: thanos
+            app.kubernetes.io/namespace: monitoring
       toPorts:
         - ports:
             - port: "9000"
