--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -170,7 +170,7 @@ spec:
             kind: Issuer
             name: vault-issuer
       metrics:
-        enableOpenMetrics: true
+        #enableOpenMetrics: true
         enabled:
           - dns
           - drop
