--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -179,8 +179,8 @@ spec:
           - port-distribution
           - icmp
           - http
-          - policy:sourceContext=app|workload-name|pod|reserved-identity;destinationContext=app|workload-name|pod|dns|reserved-identity;labelsContext=source_namespace,destination_namespace
-          # # - httpV2:exemplars=true;labelsContext=source_ip
+          #- policy:sourceContext=app|workload-name|pod|reserved-identity;destinationContext=app|workload-name|pod|dns|reserved-identity;labelsContext=source_namespace,destination_namespace
+          - httpV2:exemplars=true;labelsContext=source_ip
           # - source_namespace
           # - source_workload
           # - destination_ip
