--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -180,13 +180,13 @@ spec:
           - icmp
           - http
           #- policy:sourceContext=app|workload-name|pod|reserved-identity;destinationContext=app|workload-name|pod|dns|reserved-identity;labelsContext=source_namespace,destination_namespace
-          - httpV2:exemplars=true;labelsContext=source_ip
-          # - source_namespace
-          # - source_workload
-          # - destination_ip
-          # - destination_namespace
-          # - destination_workload
-          # - traffic_direction
+          #- httpV2:exemplars=true;labelsContext=source_ip
+          - source_namespace
+          - source_workload
+          - destination_ip
+          - destination_namespace
+          - destination_workload
+          - traffic_direction
         serviceMonitor:
           enabled: true
         dashboards:
