--- a/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/kube-system/cilium/app/helmrelease.yaml
@@ -170,23 +170,23 @@ spec:
             kind: Issuer
             name: vault-issuer
       metrics:
-        #enableOpenMetrics: true
+        enableOpenMetrics: true
         enabled:
-          - dns
+          - dns:query;ignoreAAAA
           - drop
           - tcp
           - flow
-          - port-distribution
           - icmp
+          - port-distribution
           - http
           #- policy:sourceContext=app|workload-name|pod|reserved-identity;destinationContext=app|workload-name|pod|dns|reserved-identity;labelsContext=source_namespace,destination_namespace
           #- httpV2:exemplars=true;labelsContext=source_ip
-          - source_namespace
-          - source_workload
-          - destination_ip
-          - destination_namespace
-          - destination_workload
-          - traffic_direction
+          # - source_namespace
+          # - source_workload
+          # - destination_ip
+          # - destination_namespace
+          # - destination_workload
+          # - traffic_direction
         serviceMonitor:
           enabled: true
         dashboards:
