enable mtls for ns to ns

--- a/kubernetes/clusters/main/home-automation/ciliumnetworkpolicy.yaml
+++ b/kubernetes/clusters/main/home-automation/ciliumnetworkpolicy.yaml
@@ -10,7 +10,11 @@ spec:
   - toEndpoints:
     - matchLabels:
         "k8s:io.kubernetes.pod.namespace": *namespace
+    authentication:
+      mode: required        
   ingress:
   - fromEndpoints:
     - matchLabels:
         "k8s:io.kubernetes.pod.namespace": *namespace
+    authentication:
+      mode: required
