--- a/kubernetes/clusters/common/kyverno/kustomization.yaml
+++ b/kubernetes/clusters/common/kyverno/kustomization.yaml
@@ -4,6 +4,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   # Pre Flux-Kustomizations
+  - ./ciliumnetworkpolicy.yaml
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./kyverno/ks.yaml
