--- a/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/kube-system/cilium/app/helmrelease.yaml
@@ -235,7 +235,7 @@ spec:
     dashboards:
       enabled: true
     rollOutCiliumPods: true
-    policyAuditMode: false
+    policyAuditMode: true
     securityContext:
       capabilities:
         ciliumAgent:
