--- a/kubernetes/clusters/main/home-automation/esphome/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/esphome/app/helmrelease.yaml
@@ -46,7 +46,7 @@ spec:
                 - path: /config
               accessMode: ReadWriteOnce
               size: 15Gi
-              storageClass: ceph-pool
+              storageClass: ceph-block
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
