--- a/kubernetes/clusters/main/home-automation/esphome/app/volsync.yaml
+++ b/kubernetes/clusters/main/home-automation/esphome/app/volsync.yaml
@@ -38,7 +38,7 @@ spec:
     cacheCapacity: 8Gi
     cacheStorageClassName: local-path
     volumeSnapshotClassName: csi-ceph-blockpool
-    storageClassName: ceph-pool
+    storageClassName: ceph-block
     retain:
       daily: 7
       within: 3d
