--- a/kubernetes/clusters/main/home-automation/home-assistant/app/volsync.yaml
+++ b/kubernetes/clusters/main/home-automation/home-assistant/app/volsync.yaml
@@ -38,7 +38,7 @@ spec:
     cacheCapacity: 8Gi
     cacheStorageClassName: local-path
     volumeSnapshotClassName: csi-ceph-blockpool
-    storageClassName: ceph-pool
+    storageClassName: ceph-block
     moverSecurityContext:
       runAsUser: 568
       runAsGroup: 568
