--- a/kubernetes/clusters/main/home-automation/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/clusters/main/home-automation/zwave-js-ui/app/helmrelease.yaml
@@ -44,7 +44,7 @@ spec:
                 - path: /usr/src/app/store
               accessMode: ReadWriteOnce
               size: 1Gi
-              storageClass: ceph-pool
+              storageClass: ceph-block
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
