add dedicated mikrotik aggregator input

--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/helmrelease.yaml
@@ -63,6 +63,8 @@ spec:
             port: 6010
           unifi:
             port: 6020
+          mikrotik:
+            port: 6030
     persistence:
       config:
         type: configMap
