--- a/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
+++ b/kubernetes/clusters/k0s/monitoring/vector/app/aggregator/resources/vector.yaml
@@ -24,6 +24,11 @@ sources:
     version: "2"
     address: 0.0.0.0:6020
 
+  mikrotik_source:
+    type: vector
+    version: "2"
+    address: 0.0.0.0:6030
+
 #
 # Transforms
 #
@@ -117,6 +122,17 @@ sinks:
       source_port: '{{ message.SPT }}'
       dest_ip: '{{ message.DST }}'
       dest_port: '{{ message.DPT }}'
+
+  mikrotik:
+    inputs: ["mikrotik_source"]
+    type: loki
+    endpoint: http://loki-gateway.monitoring.svc.cluster.local
+    encoding: { codec: json }
+    out_of_order_action: accept
+    remove_label_fields: false
+    remove_timestamp: true
+    labels:
+      app: 'mikrotik-switch'
 
   auth:
     inputs: ["unifi_route.auth"]
